# Bilbo

./: .gitignore  CHANGELOG.md  CLAUDE.md  IDEA.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: benchmark_energy.py
src/bilbo/: align.py  assemble.py  audio.py  cli.py  library.py  llm.py  log.py  metadata.py  models.py  pipeline.py  segment.py  transcribe.py
tests/: conftest.py  test_align.py  test_assemble.py  test_audio.py  test_cli.py  test_library.py  test_llm.py  test_metadata.py  test_segment.py
