[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bilbo-audiobook"
version = "0.1.2"
description = "Bilingual audiobook interleaver"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "xiaoxiae" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "faster-whisper",
    "pysbd",
    "sentence-transformers",
    "click",
    "soundfile",
    "numpy",
    "Pillow",
    "mutagen",
]

[project.optional-dependencies]
cpu = ["torch"]
cuda = []

[dependency-groups]
dev = ["pytest"]

[project.scripts]
bilbo = "bilbo.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bilbo"]

[project.urls]
Homepage = "https://github.com/xiaoxiae/Bilbo"
Repository = "https://github.com/xiaoxiae/Bilbo"
Issues = "https://github.com/xiaoxiae/Bilbo/issues"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cuda" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
